<resources>
    <string name="app_name">AndroidFinalProject2</string>
    <string name="start_playing">start playing</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="level1">Level1</string>
    <string name="level2">Level2</string>
    <string name="full_name">full_name</string>
    <string name="email_address">email_address</string>
    <string name="birthdate">birthdate</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="save">save</string>


    <string-array name="country">
        <item>jordan</item>
        <item>palestine</item>
        <item>Gaza</item>
        <item>Egypt</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>