<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#529EA8"
    android:orientation="vertical"
    tools:context=".Home_Activity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile_"
        android:backgroundTint="@color/white"

        />





    <Button
        android:id="@+id/btn_start"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="40dp"
        android:background="@drawable/shape_et"
        android:drawableEnd="@android:drawable/ic_media_play"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:text="@string/start_playing"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn_settinges"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="40dp"
        android:background="@drawable/shape_et"
        android:drawableEnd="@android:drawable/stat_notify_more"
        android:padding="20dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_out"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="40dp"
        android:background="@drawable/shape_et"
        android:drawableEnd="@android:drawable/ic_menu_close_clear_cancel"
        android:padding="20dp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>